<resources>
    <string name="app_name">Assessment3App</string>
    <string name="registertxt">Register</string>
    <string name="Forenametxt">Forename</string>
    <string name="Surnametxt">Surname</string>
    <string name="Emailtxt">E-Mail</string>
    <string name="Addresstxt">Address</string>
    <string name="citytxt">City</string>
    <string name="postcodetxt">Postcode</string>
    <string name="usernametxt">Username</string>
    <string name="password1">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="registerbut">Register</string>
    <string name="logintxt">Username</string>
    <string name="loginpass">Password</string>
    <string name="loginbut">Login</string>
    <string name="registermainpage">Register</string>
    <string name="ptvbut">Places to Visit</string>
    <string name="WGOBut">Whats Going On?</string>
    <string name="GetAroundBut">Getting Around</string>
    <string name="ptvtxt">Places To Visit</string>
    <string name="backtomenu">Back to Menu</string>
    <string name="nextbut">Next</string>
    <string name="traintxt">Train</string>
    <string name="bustxt">Bus</string>
    <string name="Cyclingtxt">Cycling</string>
    <string name="onfoottxt">On Foot</string>
    <string name="reviewtxt">Add a review</string>
    <string name="comment">Your Comment</string>
    <string name="locid">Location ID</string>
    <string name="userrating">User Rating (0 to 10)</string>
    <string name="Datesubmitted">Date Submitted</string>
    <string name="submitreview">Submit Review</string>
    <string name="viewreview">View Reviews</string>
     <string name="wgon1">The Glasgow International Comedy Festival returns Thursday 8 - Sunday 25 March 2018 with top comedians , television names and stand up stars to stages across Glasgow. Keep up to Date by following Glasgow Comedy on twitter(@GlasgowComedy) for the full programme</string>
    <string name="Attraction1">Attraction 1</string>
    <string name="Attraction2">Attraction 2</string>
    <string name="Attraction3">Attraction 3</string>
    <string name="Attraction4">Attraction 4</string>
    <string name="WGO2">Aye Write! Glasgow\'s Book Festival celebrates the best in national, international and local writing, and annually brings speakers to Glasgow\'s iconic Mitchell Library allowing audiences to enjoy appearances from big name writers and emerging talent alike.</string>
    <string name="wgo3">The world\'s top darts players will return to The SSE Hydro for the 2018 on Thursday March 22. The SSE Hydro has become a firm favourite for Scottish darts fans since the tournament\'s first visit to the Glasgow venue in 2014, following its previous success at the SECC.</string>
    <string name="wgo4">QI: NO SUCH THING AS A FISH No Such Thing As A Fish, a podcast developed by the researchers behind the long-running BBC comedy quiz QI, will be taking their show on the road in the spring of 2018. Each episode of the podcast sees a presenter take it in turn to offer their favourite fact they have discovered that week, They will be in Glasgow on the 18th March 2018.</string>
    <string name="Attraction5">Attraction 5</string>
    <string name="wgon5">The Guy Garvey-fronted band embark on a UK arena tour in spring 2018, starting with Glasgow\'s The SSE Hydro on March 2nd. Get your tickets early to avoid missing out!</string>
    <string name="Attraction6">Attraction 6</string>
    <string name="Attraction7">Attraction 7</string>
    <string name="Attraction8">Attraction 8</string>
    <string name="Attraction9">Attraction 9</string>
    <string name="Attraction10">Attraction 10</string>
    <string name="Attraction11">Attraction 11</string>
    <string name="ptv1">No visit to Glasgow would be complete without a trip to one of the city owned museums and galleries. Kelvingrove Art Gallery and Museum is rated number 1 on TripAdvisor for things to do in Glasgow, it has a diverse, world-class collection of art and artefacts from Natural History to Arms and Armour. It\'s also one of the many museums that are free to visit! Welcoming over one million visitors a year, housed in an iconic red sandstone building which sits majestically in the beautiful surroundings of Kelvingrove Park, it’s arguably the top must see attraction in the city.</string>
    <string name="ptv2"><![CDATA[Glasgow has a rich and varied architectural heritage. From the Art Nouveau wonders of Charles Rennie Mackintosh to the medieval Glasgow Cathedral to the Neo-Gothic University of Glasgow – rumoured to be the inspiration for Harry Potter\'s Hogwarts. Glasgow’s wealthy past has also left a legacy of the finest Victorian architecture in the UK like the Necropolis and iconic City Chambers. The appearance of Glasgow’s buildings is so striking, they have been used as the backdrop in many Hollywood films including World War Z, Fast & Furious 6 and Cloud Atlas. So when you\'re wandering around the city don\'t forget to look up!]]></string>
    <string name="ptv4">Tennent\'s is to Glasgow as Guinness is to Dublin so no visit to the city would be complete without taking a tour of the historic Wellpark Brewery where it\'s created.  The tour around the brewery also focuses on its passion for Scottish football and proud musical heritage, as it takes you through more than 450 years of history. And yes, you’ll be able to enjoy a wee tipple at the end.</string>
    <string name="ptv3">Ashton Lane is a cobbled back street in the city’s West End neighbourhood that is lined with a mix of great bars and restaurants and even an independent cinema. The lane is lit with twinkling fairy lights in winter and in summer it’s a hot spot for al fresco eating and drinking in the sunshine. Be sure to make a stop at the Ubiquitous Chip – one of Glasgow’s finest Scottish restaurants - where you can try the house speciality of home-made haggis and their bar, the Wee Pub, is a great place to go for a pint or a wee dram.</string>
    <string name="ptv5">Glaswegians are known for their passion for the beautiful game so a tour of one of the city’s iconic football stadiums is a must.  Visitors can take guided tours at both Celtic and Rangers Football Clubs. Glasgow is also home to Scotland’s National Stadium, Hampden Park where you can visit the Scottish Football Museum to discover some of the oldest football memorabilia in the world and find out why Scotland has such an important place in the history of the game.   As a great sporting city, Glasgow\'s world-class venues also play host to a number of global sporting events. In the summer of 2018, Europe’s top athletes will compete in the inaugural European Championships – an exciting new multi-sport event bringing together some of the continent’s leading sports.</string>
    <string name="ptv6">Glasgow is the largest retail centre in the UK outside London. Buchanan Street is the main pedestrianised shopping area, connecting Sauchiehall Street and Argyle Street, all lined with big names you’d expect from the great British high street. But it’s the city’s neighbourhoods where you will really uncover the unique shopping treasures. The cobbled streets and lanes of the West End are where you will find a mix of vintage stores and independent boutiques. Wander along to The Hidden Lane in Finnieston to uncover a really quirky mix of designers and crafters who you can see hard at work while you peruse the goodies they have on sale.  Or head to the Merchant City, the lively cultural quarter, to discover designer boutiques and independent galleries.</string>
    <string name="getaroundintro">"Getting Around "</string>
    <string name="getaround1">Glasgow is an easy city to find your way around. Built on a grid system, it’s compact to navigate, either on foot or public transport.</string>
    <string name="getaroundwalk">Get to know Glasgow better with the Glasgow Walking app developed by Glasgow City Council, and learn about the history of the city as you discover some of its hidden gems on the walking routes.</string>
    <string name="getaroundwalking">Walking</string>
    <string name="getaroundsubwayintro">Subway</string>
    <string name="getaroundsubway">The Subway is the easiest way to get around the City Centre and West End of Glasgow. Running every 5 minutes at peak times, it takes just 24 minutes to complete a circuit of the 15 stations. Tickets start from £1.40.   You can either buy a single ticket or, if you’re here for a few days, you might want to get a Subway Smartcard, which offers the best fares and you can top up as you go. Download the Glasgow Subway map to find your way around the stations.</string>
    <string name="Train">Train</string>
    <string name="GetAroundTrain"><![CDATA[Glasgow Central Station links Glasgow by rail to the South, with Glasgow Queen Street Station operating routes mainly to Edinburgh & the North. Check out the ScotRail website for all the routes and timetables.  The SPT \"Roundabout\" ticket gives one day unlimited travel by rail and Subway to over 110 stations in the Greater Glasgow area. These tickets can be purchased through ScotRail or SPT Travel Centres and are valid after 09:00 Monday to Friday, and all day at weekends and Glasgow public holidays & can be purchased either through ScotRail or SPT Travel Centres.]]></string>
    <string name="CityBus">City Sightseeing Bus</string>
    <string name="CityBusText">The City Sightseeing Glasgow open top tour is one of the most convenient and popular ways to visit Glasgow’s top tourist attractions and iconic sights.  Serving The People’s Palace, Glasgow Cathedral, The Riverside Museum, Kelvingrove Art Gallery and Museum and The Glasgow Science Centre, the hop-on hop-off is a fun way for children and adults alike to enjoy the city.  The open-top tour buses operate all year round from 09:30 until 16:30 and the complete tour lasts 1hr 20mins. During the summer its  operates every 10 minutes, autumn every 15 minutes and every 30 minutes over the winter.  Tickets are available online, from driver or pavement staff and are valid for 1 or 2 consecutive days. You can hop-on and hop-off as often as you like at any of the 21 stops on the route.</string>
</resources>
