<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.cityofglasgowcollege.assessment3app.GetAroundActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getaroundintro" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:text="@string/getaround1" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getaroundwalking" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getaroundwalk" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getaroundsubwayintro" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getaroundsubway" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Train" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GetAroundTrain" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CityBus" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CityBusText" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickBackToMenu"
                android:text="@string/backtomenu" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
