<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.cityofglasgowcollege.assessment3app.RegisterActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/Registertitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registertxt" />

        <EditText
            android:id="@+id/forenametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Forenametxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/surnametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Surnametxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Emailtxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addresstxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Addresstxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/citytxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/citytxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postcodetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postcodetxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/usernametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernametxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password2txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/registerbut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickRegister"
            android:text="@string/registerbut" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
