<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.cityofglasgowcollege.assessment3app.WhatGoingOn">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/WGOtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WGOBut" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attraction1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_weight="0.21"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/wgon1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wgon1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attraction2" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@mipmap/wgon2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WGO2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attraction3" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@mipmap/wgon3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wgo3" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attraction4" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@mipmap/wgo4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wgo4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Attraction5" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/wgo5" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wgon5" />

            <Button
                android:id="@+id/addareview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:onClick="onClickAddReview"
                android:text="@string/reviewtxt"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/backtomenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:onClick="onClickBackToMenu"
                android:text="@string/backtomenu"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
