<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.cityofglasgowcollege.assessment3app.ReviewAddActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/username1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernametxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/comment1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/locid1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/locid"
            android:inputType="number" />

        <EditText
            android:id="@+id/rating1txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userrating"
            android:inputType="number" />

        <EditText
            android:id="@+id/datesubmittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Datesubmitted"
            android:inputType="date"
            android:selectAllOnFocus="false" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:onClick="onClickSubmit"
            android:text="@string/submitreview" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
