<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.cityofglasgowcollege.assessment3app.MenuActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/splash_art"
            android:layout_weight="0.42" />

        <Button
            android:id="@+id/ptvBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickptv"
            android:text="@string/ptvbut" />

        <Button
            android:id="@+id/WGOBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickWGO"
            android:text="@string/WGOBut" />

        <Button
            android:id="@+id/GetAroundBut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickGetAround"
            android:text="@string/GetAroundBut" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickViewReview"
            android:text="@string/viewreview" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
